# ckb-time-scripts

./: Cargo.toml  Makefile  README.md  capsule.toml
.github/workflows/: build_and_test.yml
contracts/: Cargo.toml
contracts/index-state-type/: Cargo.toml
contracts/index-state-type/src/: entry.rs  error.rs
contracts/info-type/: Cargo.toml
contracts/info-type/src/: entry.rs  error.rs
contracts/time-index-type/: Cargo.toml
contracts/time-info-type/: Cargo.toml
natives/index-state-type/: Cargo.toml
natives/index-state-type/src/: index_state_type.rs
natives/info-type/: Cargo.toml
natives/info-type/src/: info_type.rs
tests/src/: index_state_tests.rs  info_tests.rs  lib.rs  tests.rs
